apps/base/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
        policy-type: "server"
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:2025.8.0

          resources:
            requests:
              memory: 8Gi
              cpu: 2
            limits:
              memory: 12Gi
              cpu: 4

          securityContext:
              allowPrivilegeEscalation: false

          imagePullPolicy: Always

          ports:
            - containerPort: 25565
              protocol: TCP

          volumeMounts:
          - name: minecraft-data
            mountPath: /data

      restartPolicy: Always

      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: minecraft-data-pvc
